# MicroRust

./: .gitignore  README.md
accelerometer/: Cargo.toml
accelerometer/src/: main.rs
beep/: Cargo.toml
beep/src/: main.rs
blinking_led/: Cargo.toml  memory.x
blinking_led/src/: main.rs
blinking_led_v2/: Cargo.toml
blinking_led_v2/src/: main.rs
blinking_rust/: Cargo.toml
blinking_rust/src/: main.rs
debugging/: Cargo.toml
debugging/src/: main.rs
first_contact/: Cargo.toml
first_contact/src/: main.rs
funny_led/: Cargo.toml
funny_led/src/: led.rs  main.rs  shape.rs
lighthouse/: Cargo.toml
lighthouse/src/: main.rs
morse_codes/: Cargo.toml
morse_codes/src/: coder.rs  constants.rs  main.rs  signal.rs  timer.rs
motion_sensor/: Cargo.toml
motion_sensor/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
thermo-digits/: Cargo.toml
thermo-digits/src/: constants.rs  led_matrix.rs  main.rs  panel.rs  utility.rs
thermo2/: Cargo.toml
thermo2/src/: main.rs
thermometer/: Cargo.toml
thermometer/src/: main.rs
uart/: Cargo.toml
uart/src/: main.rs
