[package]
name = "motion_sensor"
description = "A simple motion sensor project with external speaker"
authors = ["Burak Selim Şenyurt"]
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
nrf52833-pac = { version = "0.12.2", features = ["rt"] }
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"