[package]
name = "server"
description = "A simple server for the micro:bit V2"
authors = ["Burak Selim Şenyurt"]
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
microbit-v2 = "0.15.1"
nb = "1.1.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"